# VoxelEngine

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  main.cpp
include/: glad.c  glad.h  khrplatform.h
include/glm/: CMakeLists.txt
include/glm/gtx/: compatibility.hpp
include/imgui/: imgui_impl_opengl3.cpp
shaders/: 3D.fs  3D.vs  bloom.fs  bloom_contrast.fs  color_correction.fs  directLightShadow.fs  directLightShadow.vs  fog.fs  gamma_correction.fs  grass.vs  leaves.vs  luminance_texture.fs  skybox.vs  sun.fs  texture.fs  texture.vs  texture_mono.fs  tone_mapper_narkowiez_aces.fs  tone_mapper_tumblin_rushmier.fs  water.fs  water.gs  water.vs
shaders/examples/: basic3D.fs  basic3D.vs  empty.fs  empty.vs  frameBuffer.fs  frameBuffer.vs  grass.vs  perlin.vs  rayTracing.fs  rayTracing.vs  rayTracingAdvanced.fs  rayTracingAdvanced.vs  texture.fs  texture.vs  triangle.vs
source/: AppName.cpp  AppName.h  Asset.cpp  Asset.h  Configuration.cpp  Configuration.h  CubeVerticesTypes.cpp  CubeVerticesTypes.h  EnumFacing.cpp  EnumFacing.h  EnumSide.h  Global.cpp  Global.h  InputHandler.cpp  InputHandler.h
source/core/entity/: Entity.cpp  Entity.h  LightSource.cpp  LightSource.h  Skybox.cpp  Skybox.h
source/core/render/: AssetManager.h  Camera.cpp  Camera.h  EntityRenderer.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
source/core/render/buffer/: BufferData.cpp  BufferData.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.h  ShaderStorageBuffer.cpp  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.cpp
source/core/world/: Block.cpp  Block.h  Blocks.cpp  Blocks.h  Chunk.cpp  Chunk.h  World.cpp  World.h
source/entity/: Entity.cpp  Entity.h  LightSource.cpp  LightSource.h  PlayerEntity.cpp  PlayerEntity.h  Skybox.cpp  SunEntity.cpp  SunEntity.h
source/render/: Camera.cpp  Camera.h  CullMesher.cpp  CullMesher.h  EntityRenderer.cpp  EntityRenderer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  WorldRenderer.cpp  WorldRenderer.h
source/render/buffer/: BufferData.cpp  BufferData.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  ShaderStorageBuffer.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
source/util/: AxisAlignedBB.cpp  AxisAlignedBB.h  Profiler.cpp  Profiler.h  RayTrace.cpp  RayTrace.h  Util.cpp  Util.h  concurrent_queue.h  concurrent_unoredered_map.h  ts_queue.h
source/world/: Block.cpp  Block.h  Blocks.cpp  Blocks.h  Chunk.cpp  Chunk.h  ChunkProvider.cpp  ChunkProvider.h  World.cpp  World.h
source/world/biome/: Biome.cpp  Biome.h  BiomeDecorator.cpp  BiomeDecorator.h  BiomeProvider.cpp  BiomeProvider.h  Biomes.cpp  Biomes.h
